--- a/restfulWebService/src/main/resources/application.properties
+++ b/restfulWebService/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.mvc.throw-exception-if-no-handler-found=true
+management.endpoints.web.exposure.include=*
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+#spring.datasource.data=/import_user.sql
